--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <!-- 外部库CDN - 使用defer确保按顺序加载 -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script defer src="https://cdn.plot.ly/plotly-2.35.2.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
