--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Art:音乐可视化——多杆件振动模拟</title>
+    <title>ViewSound:音乐可视化——多杆件振动模拟</title>
     
     <!-- 外部库CDN - 使用defer确保按顺序加载 -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
